--- a/index.html
+++ b/index.html
@@ -7,6 +7,73 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <h1>Start</h1>
+    <!-- header -->
+    <header class="header">
+      <div class="logo">
+        <img
+          src="./img/icons8-bad-idea-50.png"
+          alt="logo img"
+          class="logo__img"
+        />
+        <p class="logo__text">Company Name</p>
+      </div>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__list-item"><a href="#">Home</a></li>
+          <li class="nav__list-item"><a href="#">About Us</a></li>
+          <li class="nav__list-item"><a href="#">Gallery</a></li>
+          <li class="nav__list-item"><a href="#">Career</a></li>
+          <li class="nav__list-item"><a href="#">Contact Us</a></li>
+        </ul>
+      </nav>
+      <div class="nav__btn">
+        <img src="./img/icons8-menu-50.png" alt="menu btn" />
+      </div>
+    </header>
+
+    <main>
+      <!-- hero section -->
+      <section class="hero">
+        <div class="hero__text">
+          <p class="hero__text-subtitle">customer leaders</p>
+          <h1 class="hero__text-title">Market Leaders</h1>
+          <p class="hero__text-info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+            consequuntur sed iste ab quos dolorum. Voluptatum, nisi! Quidem
+            magni cumque dicta excepturi laborum sed consequatur!
+          </p>
+          <p class="hero__text-info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. A libero in
+            reprehenderit debitis excepturi doloremque?
+          </p>
+          <a href="#" class="hero__text-btn">Meet us!</a>
+        </div>
+        <div class="hero__photos">
+          <ul class="hero__photos-list">
+            <li class="hero__photos-img">
+              <img
+                src="https://cdn.pixabay.com/photo/2017/05/04/16/37/meeting-2284501_960_720.jpg"
+                alt=""
+              />
+            </li>
+            <li class="hero__photos-img">
+              <img
+                src="https://cdn.pixabay.com/photo/2015/01/09/11/08/startup-594090_960_720.jpg"
+                alt=""
+              />
+            </li>
+            <li class="hero__photos-img">
+              <img
+                src="https://cdn.pixabay.com/photo/2020/07/08/04/12/work-5382501_960_720.jpg"
+                alt=""
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- start section -->
+      <section class="start"></section>
+    </main>
   </body>
 </html>
