--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         <img src="./img/icons8-menu-50.png" alt="menu btn" />
       </div>
     </header>
-
     <main>
       <!-- hero section -->
       <section class="hero">
@@ -73,7 +72,37 @@
       </section>
 
       <!-- start section -->
-      <section class="start"></section>
+      <section class="start container">
+        <div class="start__text">
+          <p class="start__text-subtitle">our history</p>
+          <h2 class="start__text-title">How It All Started?</h2>
+          <p class="start__text-info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione,
+            quam.
+          </p>
+          <p class="start__text-info">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            <span
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
+              amet!</span
+            >
+          </p>
+        </div>
+        <div class="start__photo">
+          <img
+            src="https://cdn.pixabay.com/photo/2015/01/08/18/23/white-board-593309_960_720.jpg"
+            alt="start project"
+          />
+        </div>
+      </section>
+
+      <!-- services section -->
+      <section class="services container">
+        <div class="services__text">
+          <p class="services__text-subtitle">our services</p>
+          <h2 class="services__text-title">What We Do?</h2>
+        </div>
+      </section>
     </main>
   </body>
 </html>
