--- a/index.html
+++ b/index.html
@@ -102,6 +102,89 @@
           <p class="services__text-subtitle">our services</p>
           <h2 class="services__text-title">What We Do?</h2>
         </div>
+        <ul class="services__list">
+          <li class="services__list-item">
+            <h3 class="services__list-title">Development</h3>
+            <p class="services__list-info">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+            <a href="#" class="services__list-btn">read more</a>
+          </li>
+          <li class="services__list-item">
+            <h3 class="services__list-title">Exclusive Brand</h3>
+            <p class="services__list-info">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+            <a href="#" class="services__list-btn">read more</a>
+          </li>
+          <li class="services__list-item">
+            <h3 class="services__list-title">Top Marketing</h3>
+            <p class="services__list-info">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+            <a href="#" class="services__list-btn">read more</a>
+          </li>
+        </ul>
+      </section>
+
+      <!-- career section -->
+      <section class="career container">
+        <div class="career__text">
+          <p class="career__text-subtitle">career</p>
+          <h2 class="career__text-title">What Our Workers Get?</h2>
+        </div>
+        <ul class="career__list">
+          <li class="career__list-item">
+            <div class="career__list-title">
+              <img src="./img/icons8-e-learning-50.png" alt="learn" />
+              <p>English courses for interns</p>
+            </div>
+            <p class="career__list-info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consectetur, ducimus?
+            </p>
+          </li>
+          <li class="career__list-item">
+            <div class="career__list-title">
+              <img src="./img/icons8-e-learning-50.png" alt="learn" />
+              <p>English courses for interns</p>
+            </div>
+            <p class="career__list-info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consectetur, ducimus?
+            </p>
+          </li>
+          <li class="career__list-item">
+            <div class="career__list-title">
+              <img src="./img/icons8-e-learning-50.png" alt="learn" />
+              <p>English courses for interns</p>
+            </div>
+            <p class="career__list-info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consectetur, ducimus?
+            </p>
+          </li>
+          <li class="career__list-item">
+            <div class="career__list-title">
+              <img src="./img/icons8-e-learning-50.png" alt="learn" />
+              <p>English courses for interns</p>
+            </div>
+            <p class="career__list-info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consectetur, ducimus?
+            </p>
+          </li>
+          <li class="career__list-item">
+            <div class="career__list-title">
+              <img src="./img/icons8-e-learning-50.png" alt="learn" />
+              <p>English courses for interns</p>
+            </div>
+            <p class="career__list-info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consectetur, ducimus?
+            </p>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
