--- a/index.html
+++ b/index.html
@@ -185,6 +185,21 @@
             </p>
           </li>
         </ul>
+        <div class="career__bonuses">
+          <p class="career__bonuses-title">
+            Read more <span>about our bonuses</span>
+          </p>
+          <img src="./img/icons8-right-arrow-50.png" alt="" />
+        </div>
+      </section>
+
+      <!-- partners section -->
+      <section class="partners container">
+        <div class="partners__text">
+          <p class="partners__text-subtitle">partners</p>
+          <h2 class="partners__text-title">Trusted By</h2>
+        </div>
+        <ul class="partner__list"></ul>
       </section>
     </main>
   </body>
