--- a/index.html
+++ b/index.html
@@ -199,7 +199,20 @@
           <p class="partners__text-subtitle">partners</p>
           <h2 class="partners__text-title">Trusted By</h2>
         </div>
-        <ul class="partner__list"></ul>
+        <ul class="partners__list">
+          <li class="partners__list-item">
+            <img src="./img/icons8-samsung-50.png" alt="apple" />
+          </li>
+          <li class="partners__list-item">
+            <img src="./img/icons8-google-plus-50.png" alt="google" />
+          </li>
+          <li class="partners__list-item">
+            <img src="./img/icons8-apple-logo-50.png" alt="samsung" />
+          </li>
+          <li class="partners__list-item">
+            <img src="./img/icons8-microsoft-edge-50.png" alt="microsoft" />
+          </li>
+        </ul>
       </section>
     </main>
   </body>
