--- a/index.html
+++ b/index.html
@@ -146,7 +146,17 @@
           </li>
           <li class="career__list-item">
             <div class="career__list-title">
-              <img src="./img/icons8-e-learning-50.png" alt="learn" />
+              <img src="./img/icons8-course-assign-50.png" alt="learn" />
+              <p>English courses for interns</p>
+            </div>
+            <p class="career__list-info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consectetur, ducimus?
+            </p>
+          </li>
+          <li class="career__list-item">
+            <div class="career__list-title">
+              <img src="./img/icons8-test-passed-50.png" alt="learn" />
               <p>English courses for interns</p>
             </div>
             <p class="career__list-info">
@@ -166,17 +176,7 @@
           </li>
           <li class="career__list-item">
             <div class="career__list-title">
-              <img src="./img/icons8-e-learning-50.png" alt="learn" />
-              <p>English courses for interns</p>
-            </div>
-            <p class="career__list-info">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur, ducimus?
-            </p>
-          </li>
-          <li class="career__list-item">
-            <div class="career__list-title">
-              <img src="./img/icons8-e-learning-50.png" alt="learn" />
+              <img src="./img/icons8-test-passed-50.png" alt="learn" />
               <p>English courses for interns</p>
             </div>
             <p class="career__list-info">
@@ -214,6 +214,160 @@
           </li>
         </ul>
       </section>
+
+      <!-- office section -->
+      <section class="office container">
+        <div class="office__text">
+          <p class="office__text-subtitle">gallery</p>
+          <h2 class="office__text-title">Office in Warsaw2</h2>
+          <p class="start__text-info">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor,
+            aliquam.
+          </p>
+          <p class="start__text-info">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            <span
+              >Error vero vitae aspernatur quis ratione, fuga ut aliquid quae
+              neque unde.</span
+            >
+          </p>
+        </div>
+        <ul class="office__list">
+          <li class="office__list-item">
+            <img
+              src="https://cdn.pixabay.com/photo/2015/12/08/00/31/office-1081807_960_720.jpg"
+              alt="office photo"
+            />
+          </li>
+          <li class="office__list-item">
+            <img
+              src="https://cdn.pixabay.com/photo/2018/03/27/21/43/startup-3267505_960_720.jpg"
+              alt="office photo"
+            />
+          </li>
+          <li class="office__list-item">
+            <img
+              src="https://cdn.pixabay.com/photo/2015/07/17/22/43/student-849824_960_720.jpg"
+              alt="office photo"
+            />
+          </li>
+          <li class="office__list-item">
+            <img
+              src="https://cdn.pixabay.com/photo/2017/03/28/12/07/bricks-2181920_960_720.jpg"
+              alt="office photo"
+            />
+          </li>
+        </ul>
+      </section>
+
+      <!-- project section -->
+      <section class="project container">
+        <div class="project__text">
+          <p class="project__text-subtitle">realizations</p>
+          <h2 class="project__text-title">Our Latest Works</h2>
+        </div>
+        <ul class="project__list">
+          <li class="project__list-item">
+            <img
+              src="https://cdn.pixabay.com/photo/2015/07/17/22/44/student-849828_960_720.jpg"
+              alt="project"
+            />
+          </li>
+          <li class="project__list-item">
+            <img
+              src="https://cdn.pixabay.com/photo/2015/07/17/22/42/typing-849806_960_720.jpg"
+              alt="project"
+            />
+          </li>
+          <li class="project__list-item">
+            <img
+              src="https://cdn.pixabay.com/photo/2015/01/09/11/11/startup-594126_960_720.jpg"
+              alt="project"
+            />
+          </li>
+          <li class="project__list-item">
+            <img
+              src="https://cdn.pixabay.com/photo/2015/07/17/22/43/student-849819_960_720.jpg"
+              alt="project"
+            />
+          </li>
+        </ul>
+      </section>
+
+      <!-- contact us section -->
+      <section class="contact container">
+        <div class="contact__text">
+          <p class="contact__text-subtitle">contact</p>
+          <h2 class="contact__text-title">Ask Us Your Questions</h2>
+        </div>
+        <form action="#" class="contact__form">
+          <div class="contact__form-group">
+            <label for="name">name</label>
+            <input
+              type="text"
+              name="name"
+              id="name"
+              class="contact__form-input"
+              placeholder="enter name"
+            />
+          </div>
+          <div class="contact__form-group">
+            <label for="email">email</label>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              class="contact__form-input"
+              placeholder="enter email"
+            />
+          </div>
+          <div class="contact__form-group">
+            <label for="message">message</label>
+            <textarea
+              name="message"
+              id="message"
+              cols="15"
+              rows="10"
+              class="contact__form-input"
+            ></textarea>
+          </div>
+          <a href="#" class="contact__form-btn">Send</a>
+        </form>
+      </section>
     </main>
+
+    <!-- footer -->
+    <footer class="footer">
+      <ul class="footer__links">
+        <li class="footer__links-item"><a href="#home">Home</a></li>
+        <li class="footer__links-item"><a href="#home">About</a></li>
+        <li class="footer__links-item"><a href="#home">Gallery</a></li>
+        <li class="footer__links-item"><a href="#home">Carrier</a></li>
+      </ul>
+      <ul class="footer__contact">
+        <li class="footer__contact-info">
+          <h4>Email</h4>
+          <p>company@gmail.com</p>
+        </li>
+        <li class="footer__contact-info">
+          <h4>Call Us</h4>
+          <p>phone:+387 174 323 26</p>
+        </li>
+      </ul>
+      <ul class="footer__connect">
+        <li class="footer__connect-icon">
+          <img src="./img/icons8-facebook-50.png" alt="connect photo" />
+        </li>
+        <li class="footer__connect-icon">
+          <img src="./img/icons8-slack-50.png" alt="connect photo" />
+        </li>
+        <li class="footer__connect-icon">
+          <img src="./img/icons8-linkedin-50.png" alt="connect photo" />
+        </li>
+        <li class="footer__connect-icon">
+          <img src="./img/icons8-instagram-50.png" alt="connect photo" />
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
