--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       </div>
       <nav class="nav">
         <ul class="nav__list">
-          <li class="nav__list-item"><a href="#">Home</a></li>
-          <li class="nav__list-item"><a href="#">About Us</a></li>
-          <li class="nav__list-item"><a href="#">Gallery</a></li>
-          <li class="nav__list-item"><a href="#">Career</a></li>
-          <li class="nav__list-item"><a href="#">Contact Us</a></li>
+          <li class="nav__list-item"><a href="#home">Home</a></li>
+          <li class="nav__list-item"><a href="#start">About Us</a></li>
+          <li class="nav__list-item"><a href="#services">Gallery</a></li>
+          <li class="nav__list-item"><a href="#career">Career</a></li>
+          <li class="nav__list-item"><a href="#contact">Contact Us</a></li>
         </ul>
       </nav>
       <div class="nav__btn">
@@ -32,7 +32,7 @@
     </header>
     <main>
       <!-- hero section -->
-      <section class="hero">
+      <section class="hero" id="home">
         <div class="hero__text">
           <p class="hero__text-subtitle">customer leaders</p>
           <h1 class="hero__text-title">Market Leaders</h1>
@@ -72,7 +72,7 @@
       </section>
 
       <!-- start section -->
-      <section class="start container">
+      <section class="start container" id="start">
         <div class="start__text">
           <p class="start__text-subtitle">our history</p>
           <h2 class="start__text-title">How It All Started?</h2>
@@ -97,7 +97,7 @@
       </section>
 
       <!-- services section -->
-      <section class="services container">
+      <section class="services container" id="services">
         <div class="services__text">
           <p class="services__text-subtitle">our services</p>
           <h2 class="services__text-title">What We Do?</h2>
@@ -128,7 +128,7 @@
       </section>
 
       <!-- career section -->
-      <section class="career container">
+      <section class="career container" id="career">
         <div class="career__text">
           <p class="career__text-subtitle">career</p>
           <h2 class="career__text-title">What Our Workers Get?</h2>
@@ -295,7 +295,7 @@
       </section>
 
       <!-- contact us section -->
-      <section class="contact container">
+      <section class="contact container" id="contact">
         <div class="contact__text">
           <p class="contact__text-subtitle">contact</p>
           <h2 class="contact__text-title">Ask Us Your Questions</h2>
@@ -340,9 +340,9 @@
     <footer class="footer">
       <ul class="footer__links">
         <li class="footer__links-item"><a href="#home">Home</a></li>
-        <li class="footer__links-item"><a href="#home">About</a></li>
-        <li class="footer__links-item"><a href="#home">Gallery</a></li>
-        <li class="footer__links-item"><a href="#home">Carrier</a></li>
+        <li class="footer__links-item"><a href="#start">About</a></li>
+        <li class="footer__links-item"><a href="#services">Gallery</a></li>
+        <li class="footer__links-item"><a href="#career">Carrier</a></li>
       </ul>
       <ul class="footer__contact">
         <li class="footer__contact-info">
@@ -368,6 +368,8 @@
           <img src="./img/icons8-instagram-50.png" alt="connect photo" />
         </li>
       </ul>
+      <p>copyright by &copy; bojan mijatovic</p>
     </footer>
+    <script src="./js/app.js"></script>
   </body>
 </html>
